[gd_scene load_steps=8 format=2]

[ext_resource path="res://themes/main_menu.tres" type="Theme" id=1]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/UI Art/Menu_Background.png" type="Texture" id=3]
[ext_resource path="res://assets/UI Art/logotype_x2.1.png" type="Texture" id=4]
[ext_resource path="res://assets/UI Art/settings_button.png" type="Texture" id=5]
[ext_resource path="res://assets/UI Art/settings_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/UI Art/settings_button_hover.png" type="Texture" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -280.0
margin_right = 850.0
margin_bottom = 60.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 112.0
rect_min_size = Vector2( 800, 0 )
theme = ExtResource( 1 )
text = "Connect"

[node name="Username" type="TextEdit" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 800.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 110 )

[node name="Adress" type="TextEdit" parent="VBoxContainer"]
margin_top = 230.0
margin_right = 800.0
margin_bottom = 340.0
rect_min_size = Vector2( 0, 110 )
text = "127.0.0.1"

[node name="MenuBackground" type="Sprite" parent="."]
position = Vector2( 959, 539 )
z_index = -1
z_as_relative = false
texture = ExtResource( 3 )

[node name="LogotypeX21" type="Sprite" parent="."]
position = Vector2( 992, 536 )
scale = Vector2( 0.932836, 0.932836 )
texture = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 234.0
margin_bottom = 226.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="VBoxContainer/Username" to="." method="_on_Username_text_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="toggled" from="TextureButton" to="." method="_on_TextureButton_toggled"]
